--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="conteiner-hero">
 
       <div class="navigation_logo">
-        <div class="Logo">Dento Plus</div>
+        <a href="/index.html" class="Logo">Dento Plus</a>
         <div class="navigation">
          <a href="/treatment.html" class="navigation-text">Услуги</a>
-         <a class="navigation-text">О нас</a>
+         <a href="#about-us" class="navigation-text">О нас</a>
          <a href="/doctors.html" class="navigation-text">Врачи</a>
-         <a class="navigation-text">Отделения</a>
+         <a href="#house" class="navigation-text">Отделения</a>
         </div>
       </div>
       </div>
@@ -124,7 +124,7 @@
     <div id="background-1">
       <div class="conteiner-hero">
       <div class="aboutUs">
-        <div class="aboutUs-heading">О КЛИННИКЕ</div>
+        <a id="about-us" class="aboutUs-heading">О КЛИННИКЕ</a>
         <div class="aboutUs-text">Клиника Dentо Plus  – это крупнейший 
           стоматологический центр для взрослых и детей, 
           ведущий свою историю с 2002 года.</div>
@@ -201,7 +201,7 @@
 
 <div id="map">
   
-  <div class="reviews-head">НАШИ ОТДЕЛЕНИЯ</div>
+  <h1 id="house" class="reviews-head">НАШИ ОТДЕЛЕНИЯ</h1>
   <div class="conteiner-hero">
 
       <div class="conteiner_branches">
