--- a/treatment.html
+++ b/treatment.html
@@ -21,11 +21,11 @@
       <div class="conteiner-hero">
   
         <div class="navigation_logo">
-          <div class="Logo">Dento Plus</div>
+          <a href="/index.html" class="Logo">Dento Plus</a>
           <div class="navigation">
-           <a class="navigation-text">Услуги</a>
-           <a class="navigation-text">О нас</a>
-           <a class="navigation-text">Врачи</a>
+           <a href="/treatment.html" class="navigation-text">Услуги</a>
+           <a href="#about-us" class="navigation-text">О нас</a>
+           <a href="/doctors.html" class="navigation-text">Врачи</a>
            <a class="navigation-text">Отделения</a>
           </div>
         </div>
