--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="conteiner-hero">
 
       <div class="navigation_logo">
-        <a href="/index.html" class="Logo">Dento Plus</a>
+        <a class="Logo">Dento Plus</a>
         <div class="navigation">
          <a href="/treatment.html" class="navigation-text">Услуги</a>
          <a href="#about-us" class="navigation-text">О нас</a>
