--- a/treatment.html
+++ b/treatment.html
@@ -24,9 +24,9 @@
           <a href="/index.html" class="Logo">Dento Plus</a>
           <div class="navigation">
            <a href="/treatment.html" class="navigation-text">Услуги</a>
-           <a href="#about-us" class="navigation-text">О нас</a>
+           <a href="/index.html" class="navigation-text">О нас</a>
            <a href="/doctors.html" class="navigation-text">Врачи</a>
-           <a class="navigation-text">Отделения</a>
+           <a href="/index.html" class="navigation-text">Отделения</a>
           </div>
         </div>
         </div>
