--- a/doctors.html
+++ b/doctors.html
@@ -18,12 +18,12 @@
         <div class="conteiner-hero">
     
           <div class="navigation_logo">
-            <a href="/index.html" class="Logo">Dento Plus</a>
+            <a href="/index.html#id=about-us" class="Logo">Dento Plus</a>
             <div class="navigation">
              <a href="/treatment.html" class="navigation-text">Услуги</a>
-             <a href="/index.html" class="navigation-text">О нас</a>
+             <a href="/index.html#about-us" class="navigation-text">О нас</a>
              <a href="/doctors.html" class="navigation-text">Врачи</a>
-             <a href="/index.html" class="navigation-text">Отделения</a>
+             <a href="/index.html#house" class="navigation-text">Отделения</a>
             </div>
           </div>
           </div>
