--- a/treatment.html
+++ b/treatment.html
@@ -24,9 +24,9 @@
           <a href="/index.html" class="Logo">Dento Plus</a>
           <div class="navigation">
            <a href="/treatment.html" class="navigation-text">Услуги</a>
-           <a href="/index.html" class="navigation-text">О нас</a>
+           <a href="/index.html#about-us" class="navigation-text">О нас</a>
            <a href="/doctors.html" class="navigation-text">Врачи</a>
-           <a href="/index.html" class="navigation-text">Отделения</a>
+           <a href="/index.html#house" class="navigation-text">Отделения</a>
           </div>
         </div>
         </div>
@@ -95,6 +95,9 @@
         <p class="prices-text">Лечение кариеса эмали
            методом «ICON»	от<a class="color-green">3 400 </a> руб. </p>
       </div>
+    </div>
+    <div class="anime">
+      <img src="Dento Plus.png" style="height: 100px;">
     </div>
   </div>
 
