--- a/treatment.html
+++ b/treatment.html
@@ -13,10 +13,7 @@
 </head> 
 
   <body>
-
-    <div id="hero">
-
-      <header id="header">
+    <header id="header">
   
       <div class="conteiner-hero">
   
@@ -31,6 +28,12 @@
         </div>
         </div>
       </header>
+    <div id="hero">
+
+      
+      <div class="anime">
+        <img src="Dento Plus.png " style="height: 100px;">
+      </div>
       <div class="conteiner-hero">
         <div class="conteiner-heading">
           <h1 class="heading">Стоматологическая <br>клиника <a class="Dentо">Dentо Plus</a></h1>
