--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
 
 <div class="maps">
-  <iframe src="https://yandex.ru/maps/213/moscow/?ll=37.526807%2C55.547886&z=16.98" width="100%" height="100%" frameborder="0"></iframe>
+  <iframe src="https://yandex.com/map-widget/v1/?um=constructor%3A12f463306b55df221239c8c076fa75b1060aeffe4b47c8411d6a93c738f3c7f6&amp;source=constructor" width="100%" height="511" frameborder="0"></iframe>
 </div>
 
 <footer class="footer">
